the_project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: cached-images-data
        persistentVolumeClaim:
          claimName: cached-images-pvc
      containers:
      - name: todo-app-container
        image: honganmaki/todo-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: cached-images-data
          mountPath: /mnt/image-cache
