the_project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-service
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
