the_project/todo-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: todo-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
  - host: todo-app.k3d.local
    http:
      paths:
      - backend:
          service:
            name: todo-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: todo-backend-service
            port:
              number: 80
        path: /api
        pathType: Prefix
